# anteater-events

./: LICENSE  README.md  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: gemini_client.py  health_url.py  supabase_client.py  urls.py  views.py
backend/config/: firebase_client.py  settings.py  urls.py
my-react-app/: package-lock.json  package.json
my-react-app/public/: location.geojson
my-react-app/src/: App.css  App.tsx
my-react-app/src/components/: FloatingActionButton.tsx  create_details.css  create_details.tsx  date_picker.tsx  marker.tsx  search_bar.tsx
my-react-app/src/utils/: createMarker.tsx  escapeHtml.ts  waitForMapClick.ts
