[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "supabase (>=2,<3)",
    "django-cors-headers (>=4,<5)",
    "django (>=5.2.7,<6.0.0)",
    "python-dotenv (>=1,<2)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
